i965: gen7 need pipe flush

https://bugs.freedesktop.org/show_bug.cgi?id=93323

Quote from above bug:
"The reason for the misrendering seems to be that we're missing
the PIPE_CONTROL flushes that are necessary on Gen7 before
switching pipelines
(among a pile of other workarounds mentioned in the BSpec...)"